apps/storage/longhorn/overlays/storage/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: longhorn-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:l7DafNrqvCuTzyCQ6OoRjRWOYxNwOXgq1d2Fpkq8x344MKA=,iv:Z3Gb+ao5xtI1AZrVDlAq0MyVKnS9ZXClbDW0NQoc3jU=,tag:XQ2j5MjMb5ppuxv03z8MXw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:fHdlJNlKjX+G/JnbMdzFJUCijVSpPMYVtKtHzFNBWCWi7vo=,iv:GTmOe4ezCETy8VPqXg4YgZIUY9nCl/evIOmsJc+LPpk=,tag:z+gOYWl9Tbuh9huobCeyWg==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJYWRuMWczN05udnBpVUNw
[...]
            zsayvC2rQwY4dWUq/pMrxHXwLkuh6r7nm7yVc5JeToJQK/6ovWSG7g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-06T21:50:45Z"
    mac: ENC[AES256_GCM,data:IkTS61q6Jc618HpwpiMhSH+kE0C3ze5fpc+hI6ou1AEiSYSVGhiBcWrKhdZboWFqmlDS3nLHckwXgVAQpoKx9bL+CBHMT8w77vRnFT2BpYbWnSenzou1BTmf+3lLYp7FFQG4To83+EVNMjbnFVt+kfU2wAVxjunlkNzYO/ypy10=,iv:/V1d+J+t4fwrXC4bgC68Opu3gOEJ6EP/n0nPwzpzHR0=,tag:+/g6DAo7bC0JZCm/KgKSpg==,type:str]
    pgp:
        - created_at: "2024-06-19T19:41:53Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAuuunsvjPViSancWid4oZHMpzGUVlon8XqgxPwAeBB6Ny
[...]
            =MKB4
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
