apps/storage/longhorn/overlays/storage/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.40.181
  name: longhorn-frontend-ui
  namespace: longhorn-system
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
    name: ui
  type: LoadBalancer
  selector:
    app: longhorn-ui
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: alertmanager-longhorn
#   namespace: longhorn-system
# spec:
#   type: NodePort
#   ports:
#   - name: web
#     nodePort: 30903
#     port: 9093
#     protocol: TCP
#     targetPort: web
#   selector:
#     alertmanager: longhorn
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: prometheus-longhorn
#   namespace: longhorn-system
# spec:
#   type: NodePort
#   ports:
#   - name: web
#     nodePort: 32452 # 30904
#     port: 9090
#     protocol: TCP
#     targetPort: web
#   selector:
#     prometheus: longhorn
