apps/storage/longhorn/overlays/storage/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "11"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ivxktyiwMey4R+YDu/cZLXO9UBJPPuQmQsY=,iv:22msD/Y5wgaKgrDARN71/ftyiHj5g+vqZQyvZBBjmzM=,tag:pUVm5K/s2UGUIPT+MAgfIg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: longhorn-frontend
    name: longhorn-frontend
    namespace: longhorn
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:eUiA2lH+WIWkJWFwaNBbeGLXlv1CkMXrauXKTtySEMoaLCktwOxfpQu9fA==,iv:Gxs2IrTJfN+f278dRnC1RTO31gBMLA8keNvgLoCN5VM=,tag:4diozL4ZdUIJIKICsSMKTQ==,type:str]
          middlewares:
            - name: longhorn-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: longhorn-frontend
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:pAa/sGmM7v8nSTLuLivcCOlEd+YUErOKXHE=,iv:dU/C4LcWZ/boYqQSVLdu8Hj7fvqwpmZ20sVI2JsA0Mc=,tag:70GMjI0vPa+fUmD4/NZ58g==,type:str]
              sans:
                - ENC[AES256_GCM,data:Dx8HwtmhHVPiegc03MZGO5/Mvz8QyOybnzfy,iv:HDoeNrUTYX7O/TY/2PR3zSFAwxXv/sUmlIsLgeqmwi4=,tag:AxIEHC46KnkmJN5fgAn3Kg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: longhorn-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyelZaOXlCUGJiTkpDcjZp
[...]
            c51dueg3eo0bHt8kz9T81MXGwJzj20XzjaHRzheXzhPkjG00o6q9pg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-07T11:03:13Z"
    mac: ENC[AES256_GCM,data:8+rf9EskREKVT9IhHqaVElXICAZpi1B4O9ugDmF+KxBur0oPMyINXxUYUMt9Rom1/Sar1TI4Ih+b1X5pFFSY0xIoPRgZABnZqvPGtnwVkcKQ2gLFfQFNTxovJ74lpgo77s1BUzBp03NP6l8uq3d9550R1Q8MlJyUatbHdXF7rnw=,iv:LA5xvoPSXWJqB3dnOSMWDzHrUjPbEHQ1IOJwr/pNzd8=,tag:3pFaioNoaPKnq+IG5gw6Yg==,type:str]
    pgp:
        - created_at: "2024-06-19T19:42:11Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+KCpr37MR/GrqusAiiBSEWjGcMwEhEh9xGaKzqRitRxsF
[...]
            +SREM4V7A4TyC/KXNtZYJd0HPh0SVJVK6EcIh8+mPwHGDQ==
            =2OsW
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
