apps/storage/longhorn/overlays/storage/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "1"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: longhorn.storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:1F22sXywH63PxlgqdqgyJJZDmv3EpLwDWBw=,iv:Z+NTVvskWocGMNgKku5eiwtRWWFjUUYYltoxGVIs0dE=,tag:gq+FORg39Bmg6IDGhl6GAw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: longhorn-frontend
    name: longhorn-frontend-staging
    namespace: longhorn
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:NsMhdUue+v215MT0vnm64ZV1ZW11ReT5JKTOeVCT0WzfkceU09vNd/xXtg==,iv:YFrdFYO1sbBVhtVWF4PyQt5JZGSYy/v/HREit638ByQ=,tag:wPGBPL/g4WAeuXk89oGlUw==,type:str]
          middlewares:
            - name: longhorn-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: longhorn-frontend
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:LCnkyhkZkBWBl4mt7xEoal4R0wA+rTfSYvc=,iv:TG0quSVuaSBZk2afwmb8fwlw+dkT4AKc55zH/z6p+tM=,tag:vMT8+95UYJF5SaoYJmRiJg==,type:str]
              sans:
                - ENC[AES256_GCM,data:Pj/Nhf6XJ93JcP67o5KjF0F9yewnBqwvM1Q5,iv:5nnvSih6JF57/cO3lyLEVI1LNtUtCkhBRW38CGwg+Uk=,tag:l+RcDRpUO17qyJznoVR+nQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: longhorn-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAydEVBTkZMRm02cFhkb29n
[...]
            0vEP1BDNFpIrFu5ZBwoB9poTGrfqKHbFnB0qXgiXwz6EBECisaDjSg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-07T11:03:03Z"
    mac: ENC[AES256_GCM,data:I36IF4mP56Cl4DGNBPZxsMR1+cfRHJlCgsbz9giGO/9I6WQZEl9hzX4v/Pt3DhEPkPCUfkjFJac08Tq05LfNBGAH36InjVc0YK1TECy2aeXbHwbrqZvbdZ03Z5KmRd7azunEynB1wdExwHa8rt523qBeXf5nDFOPjl36qfdc5gs=,iv:gZiw33KGaMbswOzGLsgXiLtDy1T334XBPm3ugYnK/o0=,tag:vMXUjH318j8t1xrGb6MFnw==,type:str]
    pgp:
        - created_at: "2024-07-07T10:31:05Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAsDP0klV0I4K8uxL2gsg1iLP+74xxzw9/TOVumPyuhy4g
[...]
            =3B5p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
